...
    <string name="btn_match">"Fingerprints match"</string>
    <string name="btn_share_encrypted_signed">"Encrypt/sign and share text"</string>
    <string name="btn_copy_encrypted_signed">"Encrypt/sign and copy text"</string>
    <string name="btn_paste_encrypted_signed">"Encrypt/sign and paste text"</string>
    <string name="btn_create_key">"Create key"</string>
...
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
...
    <string name="file_delete_successful">"%1$d out of %2$d files have been deleted.%3$s"</string>
    <string name="no_file_selected">"No file selected."</string>
    <string name="select_encryption_key">"Select at least one encryption key."</string>
    <string name="error_no_encryption_or_signature_key">"Select at least one encryption key or a signature key."</string>
    <string name="key_deletion_confirmation_multi">"Do you really want to delete all selected keys?"</string>
...

    <!-- Generic result toast -->
    <string name="snackbar_details">"Details"</string>
    <string name="with_warnings">", with warnings"</string>
    <string name="with_cancelled">", until cancelled"</string>
...
    <string name="msg_dc_clear_signature_bad">"Signature check NOT OK!"</string>
    <string name="msg_dc_clear_signature_check">"Verifying signature data"</string>
    <string name="msg_dc_clear_signature_ok">"Signature check OK"</string>
    <string name="msg_dc_clear_signature">"Saving signature data for later"</string>
    <string name="msg_dc_clear">"Processing cleartext data"</string>
...
    <string name="msg_se_error_output_uri_not_found">"Error opening URI for writing!"</string>
    <string name="msg_se_error_too_many_inputs">"More inputs than outputs specified! This is probably a programming error, please report!"</string>
    <string name="msg_se_success">"Sign/encrypt operation successful"</string>

    <!-- Messages for PgpSignEncrypt operation -->
...
    <string name="unknown">"unknown"</string>
    <string name="error_no_encrypt_subkey">"No encryption subkey available!"</string>
    <string name="error_no_file_selected">"Select at least one file to encrypt!"</string>
    <string name="error_multi_files">"Saving of multiple files not supported. This is a limitation on current Android."</string>
    <string name="error_multi_clipboard">"Encryption of multiple files to clipboard not supported."</string>
    <string name="error_detached_signature">"Sign-only operation of binary files is not supported, select at least one encryption key."</string>
    <string name="error_empty_text">"Type some text to encrypt!"</string>
    <string name="error_log_share_internal">"Internal error while preparing log!"</string>

...
    <string name="security_token_error_try_again">"Try again"</string>
    <string name="security_token_not_supported">"This Security Token is not yet supported by OpenKeychain"</string>
    <string name="btn_delete_original">Delete original file</string>

    <string name="snack_encrypt_filenames_on">"Filenames <b>are</b> encrypted."</string>
...
    <string name="error_reading_aosp">"Failed reading data, this is a bug in the Android E-Mail client! (Issue #290)"</string>
    <string name="error_reading_k9">"Received incomplete data, try touching 'Download complete message' in K-9 Mail!"</string>
    <string name="filename_unknown">Unknown filename (touch to open)</string>
    <string name="filename_unknown_text">Text (touch to show)</string>
    <string name="filename_keys">"Key Backup (touch to import)"</string>
...
    <string name="progress_processing">"Processing…"</string>
    <string name="error_saving_file">"Error saving file!"</string>
    <string name="file_saved">"File saved!"</string>
    <string name="file_delete_ok">"Original file deleted."</string>
    <string name="file_delete_none">"No file deleted! (Already deleted?)"</string>
    <string name="file_delete_exception">"Original file could not be deleted!"</string>
    <string name="error_clipboard_empty">"Clipboard is empty!"</string>
...
