<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_encrypt" />

        <TextView
            android:id="@+id/encrypt_files"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_folder_grey_24dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/btn_encrypt_files"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/encrypt_text"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_comment_text_grey600_24dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/btn_encrypt_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section_decrypt" />

        <TextView
            android:id="@+id/decrypt_files"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_folder_grey_24dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/btn_decrypt_files"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/decrypt_from_clipboard"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/btn_decrypt_clipboard"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/clipboard_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="8dp"
                android:src="@drawable/ic_content_paste_grey_24dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
